Group26/style.css
:root {
    --main-color: #18161c;
    --accent-color: #3c2a84;
    --grey-color: #242424;
    --highlight-color: #95bdf8;
    --darker-highlight-color: #6485cc;
}

.boxConstraint {
    width: 800px;
    margin-left: auto;
    margin-right: auto;
}

.window {
    background: var(--main-color);
    border: 3px solid var(--highlight-color);
    border-radius: 10px;
    padding: 5px;
    box-sizing: border-box;
    width: 750px;
    margin-left: auto;
    margin-right: auto;
}

.mainContent .window {
    width: 250px;
    margin-top: 10px;
    margin-bottom: 10px;
}

.mainContentBig .window {
    width: 750px;
    margin-top: 10px;
    margin-bottom: 10px;
    margin-left: auto;
    margin-right: auto;
}

.sideBar .window {
    width: 235px;
    margin-top: 10px;
    margin-bottom: 10px;
}

#containerTable {
    vertical-align: top;
    margin-left: auto;
    margin-right: auto;
}

#containerTable td {
    vertical-align: top;
}

#banner {
    max-width: 800;
    margin-left: auto;
    margin-right: auto;
    text-align: center;
}

#navBar {
    background: var(--grey-color);
    border: 3px solid var(--highlight-color);
    border-radius: 5px;
    text-align: center;
    padding-top: 3px;
    padding-bottom: 3px;
    padding-left: 50px;
    padding-right: 50px;
    width: max-content;
    margin: auto;
}

body {
    font-size: medium;
    color: white;
    text-align: center;
    background-color: var(--main-color);
}

footer {
    text-align: center;
    margin-top: auto;
    border-top: 3px solid var(--highlight-color);
    background-color: var(--grey-color);
    padding: 5px;
    display: flex;
    flex-direction: column;
    background-size: auto;
    flex-shrink: 0;
}

nav a {
    color: white;
    font-size: large;
    padding: 5px;
}

a:link {
    color: var(--highlight-color);
}

a:visited {
    color: var(--darker-highlight-color);
}

